fix: How to set gaps between columns and/or rows using column-gap and row-gap

--- a/3-nexter/sass/_features.scss
+++ b/3-nexter/sass/_features.scss
@@ -1,9 +1,19 @@
 .features {
-  background-color: $color-grey-light-2;
   /*
     [grid-column] value is setted like this
       grid-column: [in_which_column_part_will_start] / [in_which_column_part_will_end]
     Doing it like this makes code more readable to new users (having the name asignations at hand)
   */
   grid-column: center-start / center-end;
+  margin: 15rem 0;
+  /* Yes, you can have a grid inside another grid */
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* You can set a gap between columns and/or rows with property [gap] */
+  gap: 6rem;
+  /*
+    - In this case, you will not set any grid rows configuration because column's config adjust container's content automatically.
+    - However, you can set the rows like the following example, but it is no necessary because it has been already configurated on a implicit grid (no explicit css statements needed)
+  */
+  /* grid-template-rows: auto auto; */
 }
